# insta_parser

./: .env.sample  main.py  pyproject.toml
src/: config.py  database.py
src/models/: follower.py
src/parser/: inst_parser.py
src/services/: instagram_app.py
